[package]
name = "quant"
version = "0.1.0"
authors = ["Igor Poloskov <ipoloskov@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#matrix = { path = "../matrix"}
matrix = { git = "https://github.com/poloskovi/matrix", version = ">=0.1.1"}
